--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -67,7 +67,7 @@
 						{
 							<span class="attr">
 								<i class="fa fa-external-link"></i>
-								<a href="@plugin.Url" target="PluginWebsiteWnd">Website</a>
+								<a href="@plugin.Url" target="PluginWebsiteWnd">@T("Common.Website")</a>
 							</span>
 						}
 						@if (plugin.Author.HasValue())
