--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/List.cshtml
@@ -9,7 +9,6 @@
 @{
     var trueTemplate = "#if (Published) {# <img src='" + Url.Content("~/Administration/Themes/SmartStore/Content/images/checkmark.png") + "' /> #} #";
 	var allString = T("Admin.Common.All").Text;
-	var unspecifiedString = T("Common.Unspecified").Text;
     
     ViewBag.Title = T("Admin.Catalog.Products.Manage").Text;
 }
@@ -109,7 +108,7 @@
 				@Html.SmartLabelFor(model => model.SearchProductTypeId)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes, allString)
+				@Html.DropDownListFor(model => model.SearchProductTypeId, Model.AvailableProductTypes, allString)
 			</td>
 		</tr>
 		@if (Model.StoreCount > 1)
@@ -119,7 +118,7 @@
 					@Html.SmartLabelFor(model => model.SearchStoreId)
 				</td>
 				<td class="adminData">
-					@Html.DropDownList("SearchStoreId", Model.AvailableStores, allString)
+					@Html.DropDownListFor(model => model.SearchStoreId, Model.AvailableStores, allString)
 				</td>
 			</tr>
 		}
@@ -128,7 +127,7 @@
 				@Html.SmartLabelFor(model => model.SearchWithoutCategories)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchWithoutCategories", Model.AvailableWithoutCategories, unspecifiedString)
+				@Html.EditorFor(model => model.SearchWithoutCategories)
 			</td>
 		</tr>
 		<tr id="SearchCategoryIdContainer">
@@ -136,7 +135,7 @@
 				@Html.SmartLabelFor(model => model.SearchCategoryId)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchCategoryId", Model.AvailableCategories, allString)
+				@Html.DropDownListFor(model => model.SearchCategoryId, Model.AvailableCategories, allString)
 			</td>
 		</tr>
 		<tr>
@@ -144,7 +143,7 @@
 				@Html.SmartLabelFor(model => model.SearchWithoutManufacturers)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchWithoutManufacturers", Model.AvailableWithoutManufacturers, unspecifiedString)
+				@Html.EditorFor(model => model.SearchWithoutManufacturers)
 			</td>
 		</tr>
 		<tr id="SearchManufacturerIdContainer">
@@ -152,7 +151,7 @@
 				@Html.SmartLabelFor(model => model.SearchManufacturerId)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchManufacturerId", Model.AvailableManufacturers, allString)
+				@Html.DropDownListFor(model => model.SearchManufacturerId, Model.AvailableManufacturers, allString)
 			</td>
 		</tr>
 		<tr>
@@ -160,7 +159,7 @@
 				@Html.SmartLabelFor(model => model.SearchIsPublished)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchIsPublished", Model.AvailableIsPublished, unspecifiedString)
+				@Html.EditorFor(model => model.SearchIsPublished)
 			</td>
 		</tr>
 		<tr>
@@ -168,7 +167,7 @@
 				@Html.SmartLabelFor(model => model.SearchHomePageProducts)
 			</td>
 			<td class="adminData">
-				@Html.DropDownList("SearchHomePageProducts", Model.AvailableHomePageProducts, unspecifiedString)
+				@Html.EditorFor(model => model.SearchHomePageProducts)
 			</td>
 		</tr>
 		<tr>
