Minor fixes for last commit

--- a/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/ScheduleTask/List.cshtml
@@ -26,7 +26,8 @@
                     .Columns(columns =>
                     {
                         columns.Bound(x => x.Name).ClientTemplate("<strong><#= Name #></strong>");
-                        columns.Bound(x => x.Seconds);
+                        columns.Bound(x => x.Seconds)
+							.ClientTemplate("<#= _.formatTime(Seconds) #>");
                         columns.Bound(x => x.Enabled)
                             .ClientTemplate(@Html.SymbolForBool("Enabled"))
                             .Centered()
