Disable field for customer number in frontend according to customer setting

--- a/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Info.cshtml
@@ -134,10 +134,12 @@
                     </div>
                 }
                 
-                @if(Model.CustomerNumberEnabled)
-                {
-                    @Html.ControlGroupFor(model => model.CustomerNumber, required: false)    
-                }
+                <div class="control-group">
+                    @Html.LabelFor(model => model.CustomerNumber, new { @class = "control-label", @for = "CustomerNumber" })
+                    <div class="controls">
+                        @Html.TextBoxFor(model => model.CustomerNumber, !Model.CustomerNumberEnabled ? new { @readonly = "true" } : null)
+                    </div>
+                </div>
                 
            </fieldset>
             
